k8s/apps/romm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "RomM"
    gethomepage.dev/description: "ROM manager"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "romm.svg"
    gethomepage.dev/href: "https://romm.item.fyi"
    gethomepage.dev/siteMonitor: "http://romm.romm.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=romm"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`romm.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
